--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 LINE=1.5
-VERSION=1.5.0
-CSSVERSION=150
-YUI_JAR=../../yuicompressor-2.4.2/build/yuicompressor-2.4.2.jar
+VERSION=1.5.1
+CSSVERSION=151
+YUI_JAR=../../../yuicompressor-2.4.2/build/yuicompressor-2.4.2.jar
