Added YUI Compressor.
Adding the YUI Compressor jar file to enable building of the minified files without the need to set up the compressor location. Also makes it simpler to run in a continuous integtation system.

--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,7 @@
 	<property name="DIST_PKG_DIR" value="${DIST_DIR}/${NAME}/${VERSION}" />
 	<property name="DIST_ZIP" value="${ROOT_DIR}/${NAME}-${VERSION}.zip" />
 	<property name="DIST_TGZ" value="${ROOT_DIR}/${NAME}-${VERSION}.tgz" />
+	<property name="YUI_JAR" value="build/lib/yuicompressor-2.4.2.jar" />
 
 	<!-- Files -->
 
